fix: Align the date picker

--- a/indico_themes_canonical/static/css/_default/registration.css
+++ b/indico_themes_canonical/static/css/_default/registration.css
@@ -141,10 +141,6 @@ button.SingleDatePickerInput_calendarIcon {
   font-weight: 300;
 }
 
-.regform-section ul {
-  padding-left: 1rem;
-}
-
 .ui.form .field > label {
   font-size: 1rem;
   font-weight: 400;
